--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
     <p class="profile-systems-title">Профильные системы</p>
     <div class="blue_underline"></div>
     <div class="profile-logos">
-        <img>
-        <img>
-        <img>
-        <img>
+        <img src="images/profile_systems/rehau-logo.png">
+        <img src="images/profile_systems/wds-logo.png">
+        <img src="images/profile_systems/salamander-logo.png">
+        <img src="images/profile_systems/veka-logo.png">
     </div>
     <div class="profile-card">
         <img class="profile-image">
