--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel='stylesheet' href='css/immersive-slider.css'>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+    <script type="text/javascript" src="scripts/jquery.immersive-slider.js"></script>
 	<script type="text/javascript" src="jquery/jquery-3.3.1.js"></script>
 </head>
 <body>
@@ -42,7 +44,7 @@
 <!--            <div class="container_phone-card">-->
                 <div class="phone-card">
                     <p>В будни с 09.00 до 18.00</p>
-                    <a href="#">+7 495 477-10-82</a>
+                    <a href="tel:+7 495 477-10-82">+7 495 477-10-82</a>
                 </div>
 <!--            </div>-->
         <div class="header-button">
@@ -99,6 +101,135 @@
         </div>
     </div>
 </div>
+
+<div class="slider-portfolio">
+    <div class="wrapper-portfolio">
+        <p class="profile-systems-title">Наши работы</p>
+        <div class="blue_underline"></div>
+    </div>
+</div>
+
+<div class="feedback">
+    <div class="wrapper-feedback">
+        <div class="info-feedback">
+            <div class="info-describe">
+                <p class="header-name">Не знаете что выбрать?</p>
+                <p class="feedback-info-name">Наши менеджеры помогут Вам</p>
+            </div>
+            <div class="team">
+                <div class="member">
+                    <div class="photo-member">
+                        <img src="images/1463552405851.jpg" width="121px" height="121px" class="photo-member-img">
+                    </div>
+                    <div class="status-member">
+                        <div class="active-member"></div>
+                        <p class="member-name">Катерина</p>
+                    </div>
+                </div>
+                <div class="member">
+                    <div class="photo-member">
+                        <img src="images/1463552405851.jpg" width="121px" height="121px" class="photo-member-img">
+                    </div>
+                    <div class="status-member">
+                        <div class="active-member"></div>
+                        <p class="member-name">Иван</p>
+                    </div>
+                </div>
+            </div>
+            <div class="button-feedback">
+                <p class="feedback-info">Оставить заявку</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="certification">
+    <div class="wrapper-certification">
+        <div class="block-name">
+            <p class="profile-systems-title">Сертификаты</p>
+            <div class="blue_underline"></div>
+        </div>
+        <div class="certification-cards">
+            <div class="card">
+                <img src="images/certification.png" class="image-certification">
+            </div>
+            <div class="card">
+                <img src="images/certification.png" class="image-certification">
+            </div>
+            <div class="card">
+                <img src="images/certification.png" class="image-certification">
+            </div>
+            <div class="card">
+                <img src="images/certification.png" class="image-certification">
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="comments">
+    <div class="wrapper-comment">
+        <div class="block-name">
+            <p class="profile-systems-title">Отзывы наших клиентов</p>
+            <div class="blue_underline"></div>
+        </div>
+        <div class="comments-wrapper-card">
+            <div class="card">
+                <div class="comment-text-wrapper">
+                    <p class="comment-text">Балкон делаю второй раз. До этого ремонтировал 3 года назад в другой компании по самой низкой цене - брак был сразу, везде продувало, пошла плесень. Звонки, жалобы не помогли. Мастер «Оконного Бума» сразу сказал, что потребуется демонтаж обшивки и утеплителя, а затем делать все заново. Я согласился и теперь все отлично, за подарок в виде сушилки для белья отдельное спасибо.</p>
+                </div>
+                <div class="client">
+                    <div class="photo-client-wrapper">
+                        <img src="images/1463552405851.jpg" class="photo-client">
+                    </div>
+                    <div class="client-info">
+                        <p class="client-name">Марина</p>
+                        <p class="client-date">22.05.2020</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="comment-text-wrapper">
+                    <p class="comment-text">Балкон делаю второй раз. До этого ремонтировал 3 года назад в другой компании по самой низкой цене - брак был сразу, везде продувало, пошла плесень. Звонки, жалобы не помогли. Мастер «Оконного Бума» сразу сказал, что потребуется демонтаж обшивки и утеплителя, а затем делать все заново. Я согласился и теперь все отлично, за подарок в виде сушилки для белья отдельное спасибо.</p>
+                </div>
+                <div class="client">
+                    <div class="photo-client-wrapper">
+                        <img src="images/1463552405851.jpg" class="photo-client">
+                    </div>
+                    <div class="client-info">
+                        <p class="client-name">Марина</p>
+                        <p class="client-date">22.05.2020</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer>
+    <div class="block-name">
+        <p class="profile-systems-title">Местоположение</p>
+        <div class="blue_underline"></div>
+    </div>
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2543.465313272944!2d30.615665192568148!3d50.39516522289379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c5b7cdb221cf%3A0x6f6dd35326290a54!2z0JbRkdC70YLQvtC1INCc0L7RgNC1!5e0!3m2!1sru!2sua!4v1595100013171!5m2!1sru!2sua" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+    <div class="footer-info">
+        <div class="privacy-footer">
+            <p>Privacy Policy</p>
+            <p>Legal Terms</p>
+        </div>
+        <div class="made-by">
+            <p>made by</p>
+            <img src="images/site-ok.png">
+        </div>
+        <div class="social-network">
+            <a href="#"><img src="images/instagram.png"></a>
+            <a href="#"><img src="images/facebook.png"></a>
+            <a href="#"><img src="images/youtube.png"></a>
+        </div>
+    </div>
+</footer>
 
 <script src="scripts/header.js"></script>
 <script src="scripts/header_slider.js"></script>
