--- a/index.html
+++ b/index.html
@@ -165,6 +165,18 @@
     <div class="wrapper-portfolio">
         <p class="profile-systems-title">Наши работы</p>
         <div class="blue_underline"></div>
+        <div class="wrapper-slider">
+            <div class="card-portfolio">
+                <img src="images/d42abdb7d72cf3bdf77c95e2c9bcca3b.e7b3df8d2521429058af50ff07f8cef7.jpg">
+                <p class="city">Москва</p>
+                <p class="project-name">Название работы</p>
+            </div>
+            <div class="card-portfolio">
+                <img src="images/d42abdb7d72cf3bdf77c95e2c9bcca3b.e7b3df8d2521429058af50ff07f8cef7.jpg">
+                <p class="city">Москва</p>
+                <p class="project-name">Название работы</p>
+            </div>
+        </div>
     </div>
 </div>
 
