--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <a href="#" class="menu-btn" ><img src="images/burger_menu/menu.png" class="menu_button"></a>
         <a href="#" class="cancel-btn"><img src="images/burger_menu/cancel.png" class="cancel_button"></a>
         <nav class="codrops-demos_sidebar">
-            <a  href="index.html">Типы ремонтов</a>
-            <a class="current-demo" href="catalog.html">Калькулятор</a>
-            <a  href="news.html">Портфолио</a>
-            <a href="contact.html">Контакты</a>
-            <div class="header-language-mobile"><p>РУС</p><img src="images/down_arrow.png"></div>
+            <a  href="index.html">Акции</a>
+            <a class="current-demo" href="catalog.html">Профильные системы</a>
+            <a  href="news.html">О компании</a>
+            <a href="contact.html">Сертификаты</a>
+            <a href="contact.html">Отзывы</a>
             <!-- class="current-demo" -->
         </nav>
     </div>
@@ -63,7 +63,7 @@
 </div>
 <div class="sales_wrapper">
 <!--    <div class="sales">-->
-        <p>Последние акции и скидки</p>
+        <p class="sales-wrapper-title">Последние акции и скидки</p>
         <div class="blue_underline"></div>
 <!--    </div>-->
     <div class="sales-cards">
@@ -160,7 +160,7 @@
         </div>
     </div>
 </div>
-
+<!--
 <div class="slider-portfolio">
     <div class="wrapper-portfolio">
         <p class="profile-systems-title">Наши работы</p>
@@ -289,7 +289,7 @@
         </div>
     </div>
 </footer>
-
+-->
 <script src="scripts/header.js"></script>
 <script src="scripts/header_slider.js"></script>
 <script src="scripts/profile_systems.js"></script>
