--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
 </head>
 <body>
 
+<div id="popup" class="popup">
+    <div class="popup-body">
+        <div class="popup__content">
+            <a href="#" class="popup-close">
+                <img src="images/close.png">
+            </a>
+            <div class="block-name">
+                <p class="profile-systems-title">Обратная связь</p>
+                <div class="blue_underline"></div>
+                <p class="popup-sup-title">Наши менеджеры помогут Вам</p>
+            </div>
+            <form>
+                <input placeholder="Ваше имя" type="text">
+                <input placeholder="Ваш телефон" type="tel">
+                <input placeholder="Комментарий" type="text">
+                <div class="call-me-button">
+                    <button class="free-calculate-form-button">Перезвоните мне</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <header>
     <!-- Mobile navigation -->
     <div class="left_sidebar">
@@ -48,7 +71,7 @@
                 </div>
 <!--            </div>-->
         <div class="header-button">
-            <a>Оставить заявку</a>
+            <a href="#popup">Оставить заявку</a>
         </div>
     </div>
 </header>
@@ -301,6 +324,18 @@
         </div>
     </div>
 </footer>
+
+<div class="popup">
+    <div class="popup-body">
+        <div class="popup__content">
+            <a href="#" class="popup-close"></a>
+            <div class="popup__title">Lorem Ipsum</div>
+            <div class="popup__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="scripts/header.js"></script>
 <script src="scripts/header_slider.js"></script>
