--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="text-info">
         <h1>Качественные пластиковые окна</h1>
         <p>Lorem ipsum done kale transparent yuilo ipsum done kale transparent</p>
-        <div class="text-info-button">Оставить заявку</div>
+        <a href="#popup"><div class="text-info-button">Оставить заявку</div></a>
     </div>
 </div>
 </div>
@@ -97,7 +97,7 @@
         <div class="sales-card" style="background-image: url(images/sales_cards/sale_2.png)">
             <img class="logo" src="images/logo.png">
             <p class="sales-card-title">Качественные пластиковые окна</p>
-            <div class="sales-card-button">Оставить заявку</div>
+            <a href="#popup"><div class="sales-card-button">Оставить заявку</div></a>
         </div>
     </div>
     <div class="guarantee" id = "guarantee">
@@ -145,7 +145,7 @@
             <p class="profile-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </p>
-            <div class="profile-button">Оставить заявку</div>
+            <a href="#popup"><div class="profile-button">Оставить заявку</div></a>
         </div>
     </div>
 
@@ -156,7 +156,7 @@
             <p class="profile-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </p>
-            <div class="profile-button">Оставить заявку</div>
+            <a href="#popup"><div class="profile-button">Оставить заявку</div></a>
         </div>
     </div>
     <div class="profile-card">
@@ -166,7 +166,7 @@
             <p class="profile-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </p>
-            <div class="profile-button">Оставить заявку</div>
+            <a href="#popup"><div class="profile-button">Оставить заявку</div></a>
         </div>
     </div>
     <div class="profile-card">
@@ -176,7 +176,7 @@
             <p class="profile-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </p>
-            <div class="profile-button">Оставить заявку</div>
+            <a href="#popup"><div class="profile-button">Оставить заявку</div></a>
         </div>
     </div>
 </div>
@@ -228,7 +228,7 @@
                 </div>
             </div>
             <div class="button-feedback">
-                <p class="feedback-info">Оставить заявку</p>
+                <a href="#popup"><p class="feedback-info">Оставить заявку</p></a>
             </div>
         </div>
     </div>
